--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,8 @@ output:
 [![Coverage Status](https://img.shields.io/coveralls/nutterb/sillylogic.svg)](https://coveralls.io/r/nutterb/sillylogic?branch=master)
 
 # sillylogic
-Fun representations of boolean values.
+
+Emote via Logical Constants
 
 Inspired by the [discussion on Twitter](https://twitter.com/michaelhoffman/status/630420081042849792), `sillylogic` provides some fun alternatives to use in place of `TRUE` and `FALSE`.  Most famously:
 
